# AlgoritmosAvancados

BackEnd/ProjetoSessaoBanco/: pyproject.toml
BackEnd/ProjetoSessaoBanco/src/: servico.py
BackEnd/ProjetoSessaoBanco/src/Database/: sqlServer.py
BackEnd/ProjetoSessaoBanco/src/Entidades/: conta.py  sessoes.py
FrontEnd/ProjetoSenhaBanco/: README.md  angular.json  package-lock.json  package.json
FrontEnd/ProjetoSenhaBanco/src/: index.html
FrontEnd/ProjetoSenhaBanco/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
FrontEnd/ProjetoSenhaBanco/src/app/componentes/login/login/: login.component.html  login.component.ts
FrontEnd/ProjetoSenhaBanco/src/app/componentes/senha/: senha.component.html  senha.component.scss  senha.component.ts
FrontEnd/ProjetoSenhaBanco/src/app/componentes/senha-da-conta/: senha-da-conta.component.html  senha-da-conta.component.scss  senha-da-conta.component.spec.ts  senha-da-conta.component.ts
FrontEnd/ProjetoSenhaBanco/src/app/service/interface/: login-reponse.ts  login-request.ts  sessao-reponse.ts  sessao-request.ts
FrontEnd/ProjetoSenhaBanco/src/app/service/services/login/: login.service.ts
FrontEnd/ProjetoSenhaBanco/src/app/service/services/sessao/: sessao.service.ts
